A NoLabel Item is also a data item.

NoLabel is a pseudo-type similar to VariousArtists to contain all tracks with no labels.
It also does not have a parentCollection(). Making it a data item allows anyone trying to get its Collection
to look into the parent instead.

BUG: 243825